# iris-project

./: .gitignore  README.md  pyproject.toml
api/: main.py  test_batch_csv.py  test_data.csv  validator.py
model/: classification_report.json  iris-softmax.py  iris_predict.py  iris_softmax.joblib  model_details.json  show_model.py
